[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Jukka Aho <ahojukka5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^8.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
